--- a/personality-viz.html
+++ b/personality-viz.html
@@ -17,7 +17,7 @@
     <div class="header">
     <h1>Myers-Briggs Personality Visualization</h1>
     <p>In each row of blocks, click on the letter that best describes you (E or I, S or N, and so on)-- hover over the letters for a brief description. Once all your selections have been made, see where your personality stands in relation to others!</p>
-    <p><i>made with D3</i></p>
+    <p><i>made with D3.js</i></p>
     </div>
 <div class= "question-container">
     <div class = "question">
